force-app/main/default/objects/Payment_Transaction__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>AUD, USD, etc.</description>
    <label>Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>