force-app/main/default/objects/Payment_Transaction__c/fields/Employer_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Employer_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related subscription</description>
    <label>Subscription</label>
    <referenceTo>Employer_Subscription__c</referenceTo>
    <relationshipLabel>Payment Transactions</relationshipLabel>
    <relationshipName>Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>