force-app/main/default/objects/Payment_Transaction__c/fields/Invoice_PDF__c.field-meta.xml
<CustomField>
    <fullName>Invoice_PDF__c</fullName>
    <description>Stripe invoice link</description>
    <label>Invoice PDF</label>
    <type>Url</type>
</CustomField>