force-app/main/default/objects/Payment_Transaction__c/fields/Method_Type__c.field-meta.xml
<CustomField>
    <fullName>Method_Type__c</fullName>
    <label>Method Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Bank_Transfer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>