force-app/main/default/objects/Payment_Transaction__c/fields/Stripe_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Invoice_ID__c</fullName>
    <description>in_xxxxx</description>
    <label>Invoice ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>