force-app/main/default/objects/Payment_Transaction__c/fields/Stripe_Payment_Intent_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_Intent_ID__c</fullName>
    <description>pi_xxxxx</description>
    <label>Payment Intent</label>
    <length>50</length>
    <type>Text</type>
</CustomField>